# felix

./: README.md  main.py  parser.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yaml
src/felix/: cli.py  parser.py  validators.py
tests/: test_validators.py
