[project]
name = "Felix"
version = "0.1.0"
description = "CLI tool to parse genes and associated diseases from PMC articles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.85",
    "en-ner-bc5cdr-md",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "scispacy>=0.6.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
en-ner-bc5cdr-md = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bc5cdr_md-0.5.4.tar.gz" }

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "pytest-cov>=7.0.0",
    "tox>=4.22.0",
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused vars, etc.)
    "I",    # isort (import sorting)
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade (modern Python)
    "B",    # bugbear (common bugs)
    "C90",  # mccabe (complexity)
]
ignore = []

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [
    "src"
]
